<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8C5BF"
    android:backgroundTint="#7E7777"
    tools:context=".Activities.AddFertilizer">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="819dp"
        android:layout_height="741dp"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="4dp"
        android:rotation="90"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:srcCompat="@drawable/gradienttest2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="428dp"
        android:layout_height="74dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headbar" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Addfertitle"
        android:textColor="#120C0C"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="65dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fertilizer__1_" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="385dp"
        android:layout_height="52dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Fertilizer Name"
        android:inputType="textPersonName"
        android:textColor="#100808"
        android:textColorHint="#656262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="128dp"
        android:text="@string/FertilizerName"
        android:textColor="#100808"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/Amount"
        android:textColor="#100808"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="169dp"
        android:layout_height="39dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/price"
        android:textColor="#100808"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="387dp"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Amount"
        android:inputType="number"
        android:textColor="#100808"
        android:textColorHint="#656262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="383dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Price"
        android:inputType="number"
        android:textColor="#100808"
        android:textColorHint="#272626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/feradd_btnwidth"
        android:layout_height="@dimen/heightbtn_update"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#61B346"
        android:text="@string/Addbtn"
        android:textColor="#020101"
        android:textSize="24sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>