<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C281E"
    android:backgroundTint="#6A6352"
    android:backgroundTintMode="add"
    android:foregroundTint="#544E3E"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="@dimen/main_bg_img"
        android:layout_height="@dimen/mainimg_bg"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barn_farm_field" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="191dp"
        android:layout_height="450px"
        android:layout_marginStart="210dp"
        android:layout_marginTop="316dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/cusshape" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/MyOrders"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="@+id/imageView21" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="425dp"
        android:layout_height="82dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="198dp"
        android:layout_height="72dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Mainfer"
        android:textColor="#020000"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="191dp"
        android:layout_height="450px"
        android:layout_marginStart="10dp"
        android:layout_marginTop="121dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/cusshape" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="12dp"
        android:text="@string/myshop2"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="191dp"
        android:layout_height="450px"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/cusshape" />

    <ImageButton

        android:id="@+id/visitshops2"
        android:layout_width="@dimen/layout_width_visiticon"
        android:layout_height="@dimen/layout_height_visiticon"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#8182A1"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/location"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView

        android:id="@+id/imageView7"
        android:layout_width="191dp"
        android:layout_height="450px"
        android:layout_marginStart="10dp"
        android:layout_marginTop="396dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cusshape" />

    <ImageButton
        android:id="@+id/myShop"
        android:layout_width="@dimen/layout_width_homeicon"
        android:layout_height="@dimen/layout_height_"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#8182A1"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/store"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="16dp"
        android:text="@string/VisitShops"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6" />

    <ImageButton
        android:id="@+id/Addfer"
        android:layout_width="@dimen/layout_width_addfericon"
        android:layout_height="@dimen/layout_height_addfericon"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#8182a1"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:srcCompat="@drawable/fertilizer__1_"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="132dp"
        android:text="@string/Addfertitle"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <ImageButton
        android:id="@+id/profilebtn2"
        android:layout_width="@dimen/layout_width_profilebtn"
        android:layout_height="@dimen/layout_height_profilebtn"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#B1DA55"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/man"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="@dimen/layout_width_ordericon"
        android:layout_height="@dimen/layout_height_ordericon"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#8182A1"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        app:srcCompat="@drawable/cargo"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>